@@ -33,14 +33,17 @@ namespace Atspi
 	public class StateSet
 	{
 		private ulong states;
+		private Accessible accessible;
 
 		public StateSet ()
 		{
+			accessible = null;
 			states = 0;
 		}
 
-		public StateSet (uint [] states)
+		public StateSet (Accessible accessible, uint [] states)
 		{
+			this.accessible = accessible;
 			if (states.Length != 2)
 				throw new ArgumentException ("Expecting int [2]");
 			this.states = (ulong)(states [1] << (sizeof (int) * 8)) | (ulong)states [0];
@@ -48,12 +51,24 @@ namespace Atspi
 
 		public bool Contains (StateType state)
 		{
+			// Do not trust cache for Enabled; see BNC#596801
+			// TODO: Eventually remove this work-around
+			if (accessible != null && state == StateType.Enabled && (states & (ulong)StateType.Defunct) == 0) {
+				try {
+					uint [] data = accessible.proxy.GetState ();
+					states = (ulong)(data [1] << (sizeof (int) * 8)) | (ulong)data [0];
+				} catch (System.Exception) {
+					return false;
+				}
+			}
 			return (states & (ulong)state) != 0? true: false;
 		}
 
 		public void Add (StateType state)
 		{
 			states |= (ulong)state;
+			if (state == StateType.Defunct)
+				accessible = null;
 		}
 
 		public void Remove (StateType state)
