@@ -1,3 +1,9 @@
+2010-04-20  Mike Gorse  <mgorse@novell.com>
+
+	* apps/Document.cs: Fix NRE in GetText.
+
+	* at-spi-sharp/AccessibleTest.cs: Add test for bug 596801.
+
 2010-03-01  Mike Gorse  <mgorse@novell.com>
 
 	* at-spi-sharp/Base.cs: Allow a fixture to open multiple apps.
